--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenLocal()
     mavenCentral()
+    maven {
+        url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+    }
 }
 
 // Some general java compilation settings
@@ -37,6 +40,68 @@ javadoc {
         addBooleanOption('html5', true)
         addStringOption('Xdoclint:none', '-quiet')
     }
+}
+
+
+def targetVersion = System.getProperty('targetXPipeVersion')
+
+
+// Javafx dependencies. Not that the exact version and platform do not matter here
+// as these dependencies are only used for compilation. The proper libraries for
+// your platform and version are supplied by X-Pipe in the runtime environment
+dependencies {
+    implementation "org.openjfx:javafx-base:18:win"
+    implementation "org.openjfx:javafx-graphics:18:win"
+    implementation "org.openjfx:javafx-controls:18:win"
+}
+
+
+configurations {
+    requiredLibrary
+}
+
+dependencies {
+    // The required X-Pipe apis
+    implementation "io.xpipe:xpipe-extension:$targetVersion"
+
+    // In case you want to add a custom library to your dependencies,
+    // use the requiredLibrary configuration in order to make sure that it gets copied to the library output path
+//      requiredLibrary <...>
+
+    // Lombok libraries to make data source definitions more condensed
+    // If you don't like to use lombok, just remove these dependencies
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+}
+
+
+configurations.implementation.extendsFrom(configurations.requiredLibrary)
+
+// Copies all required libraries to the output directory
+// Note that only libraries that are not already supplied by the X-Pipe daemon are required to be supplied
+task copyRuntimeLibs(type: Copy) {
+    into "$buildDir/libs"
+    from configurations.requiredLibrary
+    exclude "${project.name}.jar"
+    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+}
+jar.finalizedBy(copyRuntimeLibs)
+
+
+// Required set up for testing
+
+// Junit dependencies
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+
+    // X-pipe libraries needed to communicate with the daemon from the testing environment
+    testImplementation "io.xpipe:xpipe-extension:$targetVersion"
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.22'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
 
 test {
@@ -62,62 +127,6 @@ sourceSets {
     }
 }
 
-// Copies all required libraries to the output directory
-// Note that only libraries that are not already supplied by the X-Pipe daemon are required to be supplied
-task copyRuntimeLibs(type: Copy) {
-    into "$buildDir/libs"
-    from configurations.runtimeClasspath
-    exclude "${project.name}.jar"
-    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
-}
-jar.finalizedBy(copyRuntimeLibs)
-
-// Junit dependencies
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
-}
-
-// Javafx dependencies. Not that the exact version and platform do not matter here
-// as these dependencies are only used for compilation. The proper libraries for
-// your platform and version are supplied by X-Pipe in the runtime environment
-dependencies {
-    compileOnly "org.openjfx:javafx-base:18:win"
-    compileOnly "org.openjfx:javafx-graphics:18:win"
-    compileOnly "org.openjfx:javafx-controls:18:win"
-}
-
-def targetVersion = System.getProperty('targetXPipeVersion')
-
-configurations {
-    launcher
-}
-
-dependencies {
-    // The required X-Pipe apis
-    compileOnly "io.xpipe:core:$targetVersion"
-    compileOnly "io.xpipe:extension:$targetVersion"
-
-    // Jackson annotations needed to indicate that our custom data source is serializable.
-    // In case you need to perform a more complex serialization, you can also add your require Jackson libraries here.
-    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: "2.13.0"
-
-    // X-pipe libraries needed to communicate with the daemon from the testing environment
-    testImplementation "io.xpipe:extension:$targetVersion"
-    testImplementation "io.xpipe:api:$targetVersion"
-    testImplementation "io.xpipe:core:$targetVersion"
-
-    // Lombok libraries to make data source definitions more condensed
-    // If you don't like to use lombok, just remove these dependencies
-    compileOnly 'org.projectlombok:lombok:1.18.22'
-    annotationProcessor 'org.projectlombok:lombok:1.18.22'
-
-    testCompileOnly 'org.projectlombok:lombok:1.18.22'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
-}
-
 test {
     workingDir = rootDir
 
@@ -131,16 +140,22 @@ test {
             " -Dio.xpipe.storage.persist=false"
 
     // Client properties
-    systemProperty 'io.xpipe.beacon.printMessages', "${System.getProperty('debugMode')}"
-    systemProperty 'io.xpipe.beacon.printDaemonOutput', "${System.getProperty('debugMode')}"
+    systemProperty 'io.xpipe.beacon.printMessages', false // "${System.getProperty('debugMode')}"
+    systemProperty 'io.xpipe.beacon.printDaemonOutput', false // "${System.getProperty('debugMode')}"
     systemProperty "io.xpipe.beacon.port", "21723"
     systemProperty "io.xpipe.beacon.launchDebugDaemon", "${System.getProperty('debugMode')}"
     systemProperty "io.xpipe.beacon.attachDebuggerToDaemon", "${System.getProperty('attachDebugger')}"
 }
 
+
+// Functionality to run production daemon with this extension enabled
+
+configurations {
+    launcher
+}
+
 dependencies {
-    launcher "io.xpipe:beacon:$targetVersion"
-    launcher "io.xpipe:api:$targetVersion"
+    launcher "io.xpipe:xpipe-beacon:$targetVersion"
 }
 
 run {
